# wasmexample

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  devcontainer.common  initUserVol.sh  setupUser.sh  shell.sh  sourceEnv.sh
.devcontainer/: devcontainer.common  setupUser.sh
cxx/: CMakeLists.txt
cxx/withdraw/: CMakeLists.txt  README.md  build.sh  main.c  wasm2wat.sh  withdraw.wat
go/withdraw/: README.md  build.sh  go.mod  run.sh  withdraw.go  withdraw.wat
rust/async-executor/: Cargo.toml
rust/async-executor/src/: lib.rs
rust/calculator/: Cargo.toml  README.md
rust/calculator/.cargo/: config.toml
rust/calculator/src/: main.rs
rust/crosstalk/: Cargo.toml  README.md  index.js  package.json  webpack.config.js
rust/crosstalk/src/: main.rs
rust/crosstalk/wasm/: Cargo.toml
rust/crosstalk/wasm/.cargo/: config.toml
rust/crosstalk/wasm/src/: lib.rs
rust/infoxchange/: Cargo.toml  README.md  infoxchange.wasm
rust/infoxchange/src/: main.rs
rust/infoxchange/wasm-cpp/: CMakeLists.txt  build.sh  compile_commands.json  infoxchange.cpp
rust/infoxchange/wasm-rust/: Cargo.toml
rust/infoxchange/wasm-rust/.cargo/: config.toml
rust/infoxchange/wasm-rust/src/: lib.rs
rust/infoxchange/wasm/src/: lib.rs
rust/infoxchange/wit/: infoxchange.wit
rust/wasm-comp-ctx/: Cargo.toml
rust/wasm-comp-ctx/src/: lib.rs  test.rs
rust/wasm-comp-ctx/test/: test_export_only.wasm  test_export_only.wit  test_import_export.wasm  test_import_export.wit  test_import_only.wasm  test_import_only.wit
rust/wasm-comp-ctx/tests/: test.wasm  test.wit
rust/withdraw/: Cargo.toml  README.md  run.sh  wasm2wat.sh  withdraw.wat
rust/withdraw/src/: main.rs
